# splitrail

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  COPILOT_ANALYZER.md  Cargo.toml  LICENSE  README.md  demo.tape  demo2.tape
.agents/: MCP.md  NEW_ANALYZER.md  PERFORMANCE.md  PRICING.md  TESTING.md  TUI.md  TYPES.md
.cargo/: audit.toml  config.toml
.claude/: settings.local.json
.claude/skills/: SKILLS.md
.claude/skills/add-new-supported-agent/: SKILL.md
.claude/skills/pricing/: SKILL.md
.github/workflows/: checks.yml  release.yml
screenshots/: cli.tape
scripts/: license-checks.sh
scripts/rewrite-retention-check/: README.md  check_retention.py  gen_corpus.py  run_check.sh  simulate_rewrite.py
src/: analyzer.rs  claude_code.rs  config.rs  contribution_cache.rs  debug_log.rs  main.rs  models.rs  reqwest_simd_json.rs  tui.rs  types.rs  upload.rs  utils.rs  version_check.rs  watcher.rs
src/analyzers/: antigravity.rs  claude_code.rs  claude_code_history.rs  cline.rs  codex.rs  codex_cli.rs  copilot.rs  copilot_cli.rs  gemini.rs  gemini_cli.rs  kilo_cli.rs  kilo_code.rs  mod.rs  opencode.rs  opencode_common.rs  pi_agent.rs  piebald.rs  qwen_code.rs  roo_code.rs  zoo_code.rs
src/analyzers/tests/: antigravity.rs  claude_code.rs  cline.rs  codex_cli.rs  copilot.rs  copilot_cli.rs  gemini_cli.rs  kilo_cli.rs  kilo_code.rs  mod.rs  opencode.rs  pi_agent.rs  qwen_code.rs  roo_code.rs  zoo_code.rs
src/analyzers/tests/source_data/: copilot.json  qwen_code.jsonl
src/cache/: mmap_repository.rs  mod.rs  model_intern.rs
src/contribution_cache/: mod.rs  multi_session.rs  single_message.rs  single_session.rs
src/contribution_cache/tests/: basic_operations.rs  compact_stats.rs  mod.rs  multi_session.rs  single_message.rs  single_session.rs
src/mcp/: server.rs  types.rs
src/tui/: logic.rs  tests.rs
src/upload/: tests.rs
src/utils/: tests.rs
vscode-splitrail/: .gitignore  .vscodeignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
vscode-splitrail/src/: dashboardView.ts  extension.ts  usageView.ts
