[package]
name = "splitrail"
version = "1.1.0"
edition = "2024"
license = "MIT"
authors = ["Piebald LLC <support@piebald.ai>"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
anyhow = "1.0"
glob = "0.3"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
rayon = "1.8"
num-format = "0.4"
ratatui = "0.29"
crossterm = "0.29"
toml = "0.9.2"
async-trait = "0.1"
notify = "8.1"
notify-types = "2.0"
sha2 = "0.10"
phf = { version = "0.12.1", features = ["macros"] }
serde_bytes = "0.11.17"
simd-json = { version = "0.15.1", features = ["serde"] }

[dependencies.clap]
version = "4.5.41"
features = ["derive"]

[dependencies.reqwest]
version = "0.12.22"
default-features = false
features = ["rustls-tls"]

[dev-dependencies]
tempfile = "3.0"
